--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 blinker==1.8.2
 click==8.1.7
 Flask==3.0.3
+Flask-Login==0.6.3
+Flask-MySQL==1.5.2
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+mysqlclient==2.2.4
+PyMySQL==1.1.1
+SQLAlchemy==2.0.31
+typing_extensions==4.12.2
 Werkzeug==3.0.3
+WTForms==3.1.2
