--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ MarkupSafe==2.1.5
 mysqlclient==2.2.4
 PyMySQL==1.1.1
 SQLAlchemy==2.0.31
+SQLite3-0611==0.0.1
 typing_extensions==4.12.2
 Werkzeug==3.0.3
 WTForms==3.1.2
